Kubernetes/RequestService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-service-deployment
spec:
  replicas: 1                          # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: request-service             # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
     labels:
       app: request-service            # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: erbidium/request-service    # образ Docker
          imagePullPolicy: Always
          name: request-service        # ім'я контейнеру
          ports:
            - containerPort: 8080      # порт по якому можна звертатись до поди
